[package]
name = "ortho-vec-derive"
description = "Derive orthogonal vector structure for better performance"
version = "0.1.0"
edition = "2021"
authors = ["Yonatan Linik <yonatanlinik@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/yonatan-linik/ortho-vec-derive"
license = "MIT"
keywords = ["derive", "macro", "struct", "vec", "performance"]
categories = ["performance"]

[features]
default = []

[dependencies]
ortho-vec-derive-impl = { version = "0.1.0", path = "../ortho-vec-derive-impl" }
ortho-vec-derive-macro = { version = "0.1.0", path = "../ortho-vec-derive-macro" }

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}
rand = "0.8.5"

[[bench]]
name = "bench_ortho_vec"
harness = false