[package]
name = "ortho_vec_derive_macro"
description = "Macro definitions for `ortho_vec_derive`"
version = "0.1.0"
edition = "2021"
authors = ["Yonatan Linik <yonatanlinik@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yonatan-linik/ortho-vec-derive"
license = "MIT"
keywords = ["derive", "macro", "struct", "vec", "performance"]
categories = []

[lib]
proc-macro = true

[dependencies]
syn = {version="2.0.14", features = ["extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"

ortho_vec_derive_impl = { version = "0.1.0", path = "../ortho_vec_derive_impl" }
